--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -279,7 +279,7 @@ footer
         margin: .3em .2em 0 .35em
 
 .dis-post-right
-    float: left
+    float: right
     width: 86%
     padding: 0 2% 2% 0
     +rem('font-size', 15px)
